--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Module 2 solution </title>
+    <style>
+      /******************* Desktop version **************/
+      @media (min-width: 992px) {
 
+      }
+      /********************Tablet view******************/
+      @media (min-width:768px) and (max-width: 991px) {
+
+      }
+      /********************Mobile device*****************/
+      @media (min-width: 767px){
+        
+      }
+
+    </style>
+  </head>
+</html>
