--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -1,1 +1,75 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mod 3 </title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <nav id="navbar" class="navbar navbar-default">
+  <div class="container">
+  <div class="navbar-header">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable_nav" aria-expanded="false">
+  <span class="sr-only">Toggle navigation</span>
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+  <span class="icon-bar"></span>
+  </button>
+  <h1 = "navbar-brand text-left">Food, LLC</h1>
+  </div>
+  <div id="collapsable_nav" class="collapse navbar-collapse">
+  <ul id="nav-list" class="nav navbar-nav navbar-right">
+  <li class="text-center">
+  <a href="#chicken" class="visible-xs">
+    </span> Chicken</a>
+  </li>
+  <li class="text-center">
+  <a href="#beef" class="visible-xs">
+  </span><br class="hidden-xs"> Beef</a>
+  </li>
+         <li class="text-center">
+           <a href="#sushi" class="visible-xs">
+          <br class="hidden-xs"> Sushi</a>
+         </li>
+       </ul>
+     </div>
 
+    </div>
+  </nav>
+
+  <div class="container" id="mainContent">
+
+    <h1 class="text-center" id="title">Our Menu</h1>
+
+    <div class="row">
+      <div class="text-justify col-md-4 col-sm-6" id="textbox">
+        <h3 id="chicken" class="text-center">Chicken</h3>
+        <section>
+          Lorem ipsum dolor sit amet,consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </section>
+        <a class="visible-xs" href="#top">Back to top</a>
+      </div>
+      <div class="text-justify col-md-4 col-sm-6" id="textbox">
+        <h3 id="beef" class="text-center">Beef</h3>
+        <section>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </section>
+        <a class="visible-xs" href="#top">Back to top</a>
+      </div>
+      <div class="text-justify col-md-4 col-sm-12" id="textbox">
+        <h3 id="sushi" class="text-center">Sushi</h3>
+    <section>
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+     </section>
+      <a class="visible-xs" href="#top">Back to top</a>
+     
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
