--- a/mod4-/index.html
+++ b/mod4-/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app = "MenuApp">
 <head>
-	<title>Solution of Module 4 by winterroll</title>
+	<title>Solution of Module 4 </title>
 	<script type="text/javascript" src = "angular.min.js"></script>
 	<script type="text/javascript" src = "angular-ui-router.min.js"></script>
 	<script type="text/javascript" src = "data.module.js"></script>
