--- a/mod4-/index.html
+++ b/mod4-/index.html
@@ -19,12 +19,9 @@
 </head>
 
 <body ng-controller = 'MenuAppController as mainController'>
-	<h1>Welcome to Our restrount!</h1>
+	<h1>Welcome to our Restaurant!</h1>
 
-	<!-- <a ui-sref = 'categories' ui-sref-active="activeTab">Categorie</a>
-	 -->
-	<br>
-	<ui-view></ui-view>
+	
 
 </body>
 </html>
