--- a/assignment4/src/tab2.html
+++ b/assignment4/src/tab2.html
@@ -1,1 +1,9 @@
-<div>This is TAB 2 content</div>
+<div>Categories</div>
+<body> <ul>
+	<li>Soup</li>
+<li>Salad</li>
+<li>Sushi</li>
+<li>Chicken</li>
+
+</ul>
+</body>
